# jsh

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  style.sh
.github/workflows/: ci.yml
ci/: Dockerfile
scripts/: build_google_test  setup.sh  style.sh
src/: environment.cpp  environment.hpp  job.cpp  job.hpp  macros.hpp  main.cpp  parsing.cpp  parsing.hpp  pch.hpp  posix_wrappers.cpp  posix_wrappers.hpp  process.cpp  process.hpp  shell.cpp  shell.hpp  utils.hpp
testing/: test_environment.cpp  test_job.cpp  test_parsing.cpp  test_process.cpp
testing/tmp/: file  file2
testing/utils/: CMakeLists.txt  write_pipe.cpp
